--- a/public/src/app/content/shared/chart/bar-chart/bar-chart.component.html
+++ b/public/src/app/content/shared/chart/bar-chart/bar-chart.component.html
@@ -9,6 +9,10 @@
 
                 <div *ngIf="i == 1">{{value.toString()[0]}}</div>
                 <div *ngIf="i == 2">{{value.toString()[1]}}</div>
+                <div *ngIf="i == 3">{{value.toString()[2]}}</div>
+                <div *ngIf="i == 4">{{value.toString()[3]}}</div>
+                <div *ngIf="i == 5">{{value.toString()[4]}}</div>
+                <div *ngIf="i == 6">{{value.toString()[5]}}</div>
             </div>
         </div>
 
@@ -19,5 +23,9 @@
 
         <div *ngIf="i + valueRound == 1">{{value.toString()[0]}}</div>
         <div *ngIf="i + valueRound == 2">{{value.toString()[1]}}</div>
+        <div *ngIf="i + valueRound == 3">{{value.toString()[2]}}</div>
+        <div *ngIf="i + valueRound == 4">{{value.toString()[3]}}</div>
+        <div *ngIf="i + valueRound == 5">{{value.toString()[4]}}</div>
+        <div *ngIf="i + valueRound == 6">{{value.toString()[5]}}</div>
     </div>
 </div>
