--- a/public/src/app/header/header.component.html
+++ b/public/src/app/header/header.component.html
@@ -63,7 +63,7 @@
                         'hm-blue-6': contentService.color == 'yellow' ||
                                         contentService.color == 'red' ||
                                       contentService.color == 'orange'}"
-                    (click)="contentService.currentContentpage ? editJodel() : sendJodel()">
+                    (click)="contentService.currentContentpage ? editJodel() : sendJodel2()">
                 {{contentService.currentContentpage ? 'edit' : 'send'}}
             </button>
         </div>
