--- a/public/src/app/content/your-result-content/result-content/result-content.component.html
+++ b/public/src/app/content/your-result-content/result-content/result-content.component.html
@@ -2,7 +2,8 @@
 
 <!--Karma-->
 <app-bar-chart [value]="resultData.karma"
-               [title]="'Karma'">
+               [title]="'Karma'"
+                [maxValue]="resultData.karmaMaxValue">
 </app-bar-chart>
 
 <!--Votes-->
