--- a/public/src/app/header/content-page-selection/content-page-selection.component.less
+++ b/public/src/app/header/content-page-selection/content-page-selection.component.less
@@ -148,6 +148,11 @@ select {
     margin: 2px;
   }
 
+  .slidetitle {
+    width:75px;
+    overflow:hidden;
+  }
+
   .slidenav {
     margin: auto;
     text-align:center;
