fixed main container width

--- a/public/src/styles.css
+++ b/public/src/styles.css
@@ -1171,7 +1171,7 @@ button:hover {
  * @since   22.03.2018
  */
 .mainContainer {
-  max-width: 1440px;
+  width: 1440px;
   margin: 0 auto;
 }
 .loadingScreen {
