map different headlines

--- a/public/src/app/content/shared/map-content/map-content.component.html
+++ b/public/src/app/content/shared/map-content/map-content.component.html
@@ -1,9 +1,9 @@
-<h2>Beliebtheit in Deutschland</h2>
+<h2>{{headline}}</h2>
 
 <div class="grid">
 
     <!--<div class="info-box" *ngIf="city">-->
-  <h3>{{city}} ({{votes}} Votes)</h3>
+  <h3>{{city}} ({{votes}} Vorkommen)</h3>
     <!--</div>-->
 
     <div id="map">
