--- a/public/src/app/content/your-result-content/your-result-content.component.html
+++ b/public/src/app/content/your-result-content/your-result-content.component.html
@@ -1,6 +1,7 @@
 <!--LEFT-->
 <div class="col-3">
-    <app-map-content  [map]="yourResultContent.map">
+    <app-map-content  [map]="yourResultContent.map"
+                    [headline]="'Relevanz deines Jodels in Deutschland'">
     </app-map-content>
 </div>
 
