--- a/public/src/app/content/keyword-content/keyword-content.component.html
+++ b/public/src/app/content/keyword-content/keyword-content.component.html
@@ -1,6 +1,7 @@
 <!--LEFT-->
 <div class="col-3">
-  <app-map-content  [map]="keywordContent.map">
+  <app-map-content  [map]="keywordContent.map"
+                    [headline]="'Relevanz deines Schlagwortes in Deutschland'">
   </app-map-content>
 </div>
 
