disable send button if jodel text is empty

--- a/public/src/app/header/header.component.html
+++ b/public/src/app/header/header.component.html
@@ -57,7 +57,8 @@
                         [(ngModel)]="jodel.time"
                         class="bg-{{contentService.color}}"><br><br>
 
-                <button [ngClass]="{
+                <button [disabled]="!jodel.text"
+                        [ngClass]="{
                         'sendEditButton': true,
                         'hm-orange-6': contentService.color == 'blue' ||
                                             contentService.color == 'green' ||
