--- a/public/src/app/header/header.component.less
+++ b/public/src/app/header/header.component.less
@@ -19,6 +19,10 @@
     border-radius: 2px;
   }
 
+  .sendEditButton[disabled] {
+    filter: brightness(90%) !important;
+  }
+
   .getRandomJodel {
     //background-color: blue;
     background-color: Transparent;
