--- a/public/src/styles.css
+++ b/public/src/styles.css
@@ -1247,6 +1247,7 @@ button:hover {
 }
 .headerContainer .sendEditButton[disabled] {
   filter: brightness(90%) !important;
+  cursor: default;
 }
 .headerContainer .getRandomJodel {
   background-color: Transparent;
