Changed arrow size and deleted logs and fixed bug in map when no city is selected

--- a/public/src/styles.css
+++ b/public/src/styles.css
@@ -100,438 +100,6 @@ textarea[disabled] {
  * @author  Maya
  * @since   22.03.2018
  */
-.hm-orange-0 {
-  background-color: #fef0de;
-}
-.hm-orange-1 {
-  background-color: #fee4c6;
-}
-.hm-orange-2 {
-  background-color: #fdd8ad;
-}
-.hm-orange-3 {
-  background-color: #fccc94;
-}
-.hm-orange-4 {
-  background-color: #fcc07b;
-}
-.hm-orange-5 {
-  background-color: #fbb562;
-}
-.hm-orange-6 {
-  background-color: #fba949;
-}
-.hm-orange-7 {
-  background-color: #fa9d30;
-}
-.hm-orange-8 {
-  background-color: #f99117;
-}
-.hm-orange-9 {
-  background-color: #f18506;
-}
-.orange {
-  color: #fcc88a;
-}
-.light-orange {
-  color: #fddfbc;
-}
-.dark-orange {
-  color: #fa9826;
-}
-.bg-orange {
-  background-color: #fcc88a;
-}
-.bg-light-orange {
-  background-color: #fddfbc;
-}
-.bg-dark-orange {
-  background-color: #fa9826;
-}
-.hm-green-0 {
-  background-color: #e9f1d4;
-}
-.hm-green-1 {
-  background-color: #e0ebc1;
-}
-.hm-green-2 {
-  background-color: #d6e4ad;
-}
-.hm-green-3 {
-  background-color: #ccde9a;
-}
-.hm-green-4 {
-  background-color: #c3d887;
-}
-.hm-green-5 {
-  background-color: #b9d274;
-}
-.hm-green-6 {
-  background-color: #afcb60;
-}
-.hm-green-7 {
-  background-color: #a6c54d;
-}
-.hm-green-8 {
-  background-color: #9abb3d;
-}
-.hm-green-9 {
-  background-color: #8aa837;
-}
-.green {
-  color: #c8dc92;
-}
-.light-green {
-  color: #dce8b9;
-}
-.dark-green {
-  color: #a2c246;
-}
-.bg-green {
-  background-color: #c8dc92;
-}
-.bg-light-green {
-  background-color: #dce8b9;
-}
-.bg-dark-green {
-  background-color: #a2c246;
-}
-.hm-yellow-0 {
-  background-color: #fff6e5;
-}
-.hm-yellow-1 {
-  background-color: #ffeecc;
-}
-.hm-yellow-2 {
-  background-color: #ffe5b2;
-}
-.hm-yellow-3 {
-  background-color: #fedd99;
-}
-.hm-yellow-4 {
-  background-color: #fed47f;
-}
-.hm-yellow-5 {
-  background-color: #fecb66;
-}
-.hm-yellow-6 {
-  background-color: #fec34d;
-}
-.hm-yellow-7 {
-  background-color: #feba33;
-}
-.hm-yellow-8 {
-  background-color: #feb21a;
-}
-.hm-yellow-9 {
-  background-color: #fda902;
-}
-.yellow {
-  color: #fed98f;
-}
-.light-yellow {
-  color: #ffeac1;
-}
-.dark-yellow {
-  color: #feb729;
-}
-.bg-yellow {
-  background-color: #fed98f;
-}
-.bg-light-yellow {
-  background-color: #ffeac1;
-}
-.bg-dark-yellow {
-  background-color: #feb729;
-}
-.hm-red-0 {
-  background-color: #fcf1f0;
-}
-.hm-red-1 {
-  background-color: #f7dddb;
-}
-.hm-red-2 {
-  background-color: #f3c9c6;
-}
-.hm-red-3 {
-  background-color: #efb5b1;
-}
-.hm-red-4 {
-  background-color: #eaa29c;
-}
-.hm-red-5 {
-  background-color: #e68e86;
-}
-.hm-red-6 {
-  background-color: #e17a71;
-}
-.hm-red-7 {
-  background-color: #dd665c;
-}
-.hm-red-8 {
-  background-color: #d95347;
-}
-.hm-red-9 {
-  background-color: #d43f32;
-}
-.red {
-  color: #edaea8;
-}
-.light-red {
-  color: #f6d5d2;
-}
-.dark-red {
-  color: #db5e54;
-}
-.bg-red {
-  background-color: #edaea8;
-}
-.bg-light-red {
-  background-color: #f6d5d2;
-}
-.bg-dark-red {
-  background-color: #db5e54;
-}
-.hm-blue-0 {
-  background-color: #d4eaf3;
-}
-.hm-blue-1 {
-  background-color: #c0e0ed;
-}
-.hm-blue-2 {
-  background-color: #acd6e8;
-}
-.hm-blue-3 {
-  background-color: #98cce2;
-}
-.hm-blue-4 {
-  background-color: #84c3dd;
-}
-.hm-blue-5 {
-  background-color: #70b9d7;
-}
-.hm-blue-6 {
-  background-color: #5cafd2;
-}
-.hm-blue-7 {
-  background-color: #48a5cc;
-}
-.hm-blue-8 {
-  background-color: #379bc4;
-}
-.hm-blue-9 {
-  background-color: #318bb0;
-}
-.blue {
-  color: #90c9e0;
-}
-.light-blue {
-  color: #b8dceb;
-}
-.dark-blue {
-  color: #40a1ca;
-}
-.bg-blue {
-  background-color: #90c9e0;
-}
-.bg-light-blue {
-  background-color: #b8dceb;
-}
-.bg-dark-blue {
-  background-color: #40a1ca;
-}
-.hm-turquoise-0 {
-  background-color: #fdfefe;
-}
-.hm-turquoise-1 {
-  background-color: #edf4f2;
-}
-.hm-turquoise-2 {
-  background-color: #ddebe7;
-}
-.hm-turquoise-3 {
-  background-color: #cde1dc;
-}
-.hm-turquoise-4 {
-  background-color: #bdd7d1;
-}
-.hm-turquoise-5 {
-  background-color: #adcec5;
-}
-.hm-turquoise-6 {
-  background-color: #9dc4ba;
-}
-.hm-turquoise-7 {
-  background-color: #8ebbaf;
-}
-.hm-turquoise-8 {
-  background-color: #7eb1a4;
-}
-.hm-turquoise-9 {
-  background-color: #6ea799;
-}
-.turquoise {
-  color: #c7ddd7;
-}
-.light-turquoise {
-  color: #e7f0ee;
-}
-.dark-turquoise {
-  color: #87b7ab;
-}
-.bg-turquoise {
-  background-color: #c7ddd7;
-}
-.bg-light-turquoise {
-  background-color: #e7f0ee;
-}
-.bg-dark-turquoise {
-  background-color: #87b7ab;
-}
-.hm-darkGrey-0 {
-  background-color: #534d4d;
-}
-.hm-darkGrey-1 {
-  background-color: #464040;
-}
-.hm-darkGrey-2 {
-  background-color: #393434;
-}
-.hm-darkGrey-3 {
-  background-color: #2b2828;
-}
-.hm-darkGrey-4 {
-  background-color: #1e1c1c;
-}
-.hm-darkGrey-5 {
-  background-color: #110f0f;
-}
-.hm-darkGrey-6 {
-  background-color: #030303;
-}
-.hm-darkGrey-7 {
-  background-color: #000000;
-}
-.hm-darkGrey-8 {
-  background-color: #000000;
-}
-.hm-darkGrey-9 {
-  background-color: #000000;
-}
-.darkGrey {
-  color: #262323;
-}
-.light-darkGrey {
-  color: #413b3b;
-}
-.dark-darkGrey {
-  color: #000000;
-}
-.bg-darkGrey {
-  background-color: #262323;
-}
-.bg-light-darkGrey {
-  background-color: #413b3b;
-}
-.bg-dark-darkGrey {
-  background-color: #000000;
-}
-.hm-lightGrey-0 {
-  background-color: #ffffff;
-}
-.hm-lightGrey-1 {
-  background-color: #f2f2f2;
-}
-.hm-lightGrey-2 {
-  background-color: #e6e6e6;
-}
-.hm-lightGrey-3 {
-  background-color: #d9d9d9;
-}
-.hm-lightGrey-4 {
-  background-color: #cccccc;
-}
-.hm-lightGrey-5 {
-  background-color: #bfbfbf;
-}
-.hm-lightGrey-6 {
-  background-color: #b3b3b3;
-}
-.hm-lightGrey-7 {
-  background-color: #a6a6a6;
-}
-.hm-lightGrey-8 {
-  background-color: #999999;
-}
-.hm-lightGrey-9 {
-  background-color: #8c8c8c;
-}
-.lightGrey {
-  color: #F1F1F1;
-}
-.light-lightGrey {
-  color: #ffffff;
-}
-.dark-lightGrey {
-  color: #bebebe;
-}
-.bg-lightGrey {
-  background-color: #F1F1F1;
-}
-.bg-light-lightGrey {
-  background-color: #ffffff;
-}
-.bg-dark-lightGrey {
-  background-color: #bebebe;
-}
-.hm-grey-0 {
-  background-color: #989898;
-}
-.hm-grey-1 {
-  background-color: #8c8c8c;
-}
-.hm-grey-2 {
-  background-color: #7f7f7f;
-}
-.hm-grey-3 {
-  background-color: #727272;
-}
-.hm-grey-4 {
-  background-color: #656565;
-}
-.hm-grey-5 {
-  background-color: #595959;
-}
-.hm-grey-6 {
-  background-color: #4c4c4c;
-}
-.hm-grey-7 {
-  background-color: #3f3f3f;
-}
-.hm-grey-8 {
-  background-color: #323232;
-}
-.hm-grey-9 {
-  background-color: #262626;
-}
-.grey {
-  color: #6D6D6D;
-}
-.light-grey {
-  color: #878787;
-}
-.dark-grey {
-  color: #3a3a3a;
-}
-.bg-grey {
-  background-color: #6D6D6D;
-}
-.bg-light-grey {
-  background-color: #878787;
-}
-.bg-dark-grey {
-  background-color: #3a3a3a;
-}
 /**
  * jodel icon farben
  */
@@ -1079,7 +647,7 @@ button:hover {
   position: absolute;
   font-weight: normal;
   font-size: 15px;
-  width: calc(96%);
+  width: calc(100% - 4px);
 }
 .ng-autocomplete-dropdown .ng-dropdown {
   display: none;
@@ -1259,36 +827,6 @@ button:hover {
   width: 86px;
   float: right;
 }
-.jodelIcon-orange {
-  height: 100%;
-  background: url('assets/jodel_inv-free_orange.png') no-repeat right center;
-  background-size: contain;
-}
-.jodelIcon-green {
-  height: 100%;
-  background: url('assets/jodel_inv-free_green.png') no-repeat right center;
-  background-size: contain;
-}
-.jodelIcon-yellow {
-  height: 100%;
-  background: url('assets/jodel_inv-free_yellow.png') no-repeat right center;
-  background-size: contain;
-}
-.jodelIcon-red {
-  height: 100%;
-  background: url('assets/jodel_inv-free_red.png') no-repeat right center;
-  background-size: contain;
-}
-.jodelIcon-blue {
-  height: 100%;
-  background: url('assets/jodel_inv-free_blue.png') no-repeat right center;
-  background-size: contain;
-}
-.jodelIcon-turquoise {
-  height: 100%;
-  background: url('assets/jodel_inv-free_turquoise.png') no-repeat right center;
-  background-size: contain;
-}
 .col-3 {
   height: 100%;
 }
@@ -1416,7 +954,7 @@ select option {
   border: solid black;
   border-width: 0 1px 1px 0;
   display: inline-block;
-  padding: 3px;
+  padding: 4px;
 }
 .slidemenu .slidearrow.right {
   transform: rotate(-45deg);
